<resources>

    <string name="app_name">My Bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">Something to write</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cocktails">Cocktails</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_shopping">Shopping list</string>
    <string name="menu_account">My account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_new">Add new component</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="title_activity_update">Update</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register_above_text">Don\'t have an account yet?</string>
    <string name="action_register">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="empty_db">No data!</string>
    <string name="action_delete_all">Delete all</string>
    <string name="filters">Filters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="cocktails">Cocktails</string>
    <string name="ingredients">Ingredients</string>
    <string name="favourite">Favourite</string>
    <string name="shopping">Shopping</string>
    <string name="account">Personal Account</string>
    <string name="error_not_found">Not found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="exit_sure">Are you sure you want to exit?</string>

    <!-- Login / Register -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_num">Phone Number</string>
    <string name="password_submit">Confirm the password</string>
    <string name="error_empty">Field cannot be empty</string>
    <string name="error_wrong_e_mail">Wrong E-mail</string>
    <string name="error_wrong_phone">Wrong Phone Number</string>
    <string name="error_short_password">Password must contain at least 4 characters</string>
    <string name="error_match_password">Password mismatch</string>
    <string name="recovery_password">Password recovery</string>
    <string name="submit">Confirm</string>
    <string name="authorization">Authorization</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="text_registration">Registration</string>
    <string name="reg_in">Register</string>
    <string name="verify_code">SMS code</string>
    <string name="error_wrong_birth_date">Wrong Birth Date</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="name_cocktail">Name</string>
    <string name="degree_cocktail">Degree</string>
    <string name="volume_cocktail">Volume</string>
    <string name="taste_cocktail">Taste</string>
    <string name="group_cocktail">Group</string>
    <string name="volume_ingredient">Volume</string>
    <string name="type_ingredient">Type</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="description_cocktail">Description</string>
    <string name="receipt_cocktail">Receipt</string>
    <string name="delete">Delete</string>
    <string name="title_activity_dashboards">Dashboards</string>
    <string name="ingredients_show">Ingredients:</string>
    <string name="recommended_show">Recommended cocktails:</string>
    <string name="strength">Strength</string>
    <string name="strong">Strong</string>
    <string name="moderately_strong">Moderately strong</string>
    <string name="soft">Soft</string>
    <string name="non_alcoholic">Non alcoholic</string>
    <string name="type">Type</string>
    <string name="type_long">Long</string>
    <string name="type_shot">Shot</string>
    <string name="done">Done</string>


</resources>