<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cocktails">

    <fragment
        android:id="@+id/nav_cocktails"
        android:name="com.example.bottomtest.ui.cocktails.CocktailsFragment"
        android:label="@string/menu_cocktails"
        tools:layout="@layout/fragment_cocktails" >
        <action
            android:id="@+id/action_nav_cocktails_to_updateActivity"
            app:destination="@id/updateActivity" />
        <action
            android:id="@+id/action_nav_cocktails_to_cocktailsShow"
            app:destination="@id/cocktailsShow" />
    </fragment>

    <fragment
        android:id="@+id/nav_ingredients"
        android:name="com.example.bottomtest.ui.ingredients.IngredientsFragment"
        android:label="@string/menu_ingredients"
        tools:layout="@layout/fragment_ingredients" >
        <action
            android:id="@+id/action_nav_ingredients_to_ingredientShow"
            app:destination="@id/ingredientShow" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.bottomtest.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_nav_cocktails_to_cocktailsShow"
            app:destination="@id/cocktailsShow" />
    </fragment>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.example.bottomtest.ui.shopping_list.ShoppingFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_shopping" />


    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.bottomtest.ui.login.LoginActivity"
        android:label="@string/title_activity_login"
        tools:layout="@layout/activity_login"/>

    <activity
        android:id="@+id/addNewActivity"
        android:name="com.example.bottomtest.roomdb.fragments.add.AddNewCocktail"
        android:label="@string/title_activity_add_new"
        tools:layout="@layout/activity_add_cocktail"/>

    <activity
        android:id="@+id/updateActivity"
        android:name="com.example.bottomtest.roomdb.fragments.update.UpdateCocktail"
        android:label="@string/title_activity_update"
        tools:layout="@layout/activity_update_cocktail">
        <argument
            android:name="currentCocktail"
            app:argType="com.example.bottomtest.roomdb.model.Cocktail" />
    </activity>

    <activity
        android:id="@+id/ingredientShow"
        android:name="com.example.bottomtest.ui.ingredients.IngredientShow"
        android:label="ingredientShow"
        tools:layout="@layout/activity_add_new_ingredient">
        <argument
            android:name="currentIngredient"
            app:argType="com.example.bottomtest.roomdb.model.Ingredients" />
    </activity>

    <fragment
        android:id="@+id/nav_personal_account"
        android:name="com.example.bottomtest.ui.login.PersonalAccountFragment"
        android:label="PersonalAccountFragment" />
    <activity
        android:id="@+id/cocktailsShow"
        android:name="com.example.bottomtest.ui.cocktails.CocktailsShow"
        android:label="CocktailsShow"
        tools:layout="@layout/activity_add_cocktail">
        <argument
            android:name="currentCocktail"
            app:argType="com.example.bottomtest.roomdb.model.Cocktail" />
    </activity>

</navigation>