<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/Widget.App.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ingredient_picture"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:src="@drawable/ingredient_show"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredient_name_txt"
                style="@style/Widget.App.Card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name_cocktail"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ingredient_picture"
                app:layout_constraintTop_toTopOf="@+id/ingredient_picture" />

            <ImageButton
                android:backgroundTint="?attr/colorPrimary"
                android:id="@+id/ingredient_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shopping_cart__1_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredient_name_txt"
                android:contentDescription="@string/add_to_shopping_list" />

            <TextView
                android:id="@+id/ingredient_degree_txt"
                style="@style/Widget.App.Card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_cocktail"
                app:layout_constraintStart_toStartOf="@id/ingredient_type_txt"
                app:layout_constraintTop_toBottomOf="@id/ingredient_type_txt" />


            <TextView
                android:id="@+id/ingredient_type_txt"
                style="@style/Widget.App.Card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_ingredient"
                app:layout_constraintStart_toStartOf="@+id/ingredient_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_name_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>