<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cocktails.AddNewCocktail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        tools:context=".ui.cocktails.AddNewCocktail">

        <LinearLayout
            android:id="@+id/cocktail_show_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    android:src="@drawable/ingredient_show"/>

                <CheckBox
                    android:id="@+id/check_favourite"
                    android:button="@drawable/favourite_star"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />

            </LinearLayout>

            <TextView
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/name_input_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_cocktail"/>

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/description_input_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_cocktail" />

            <TextView
                android:visibility="gone"
                android:textStyle="italic"
                android:id="@+id/degree_input_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree_cocktail" />


            <TextView
                android:id="@+id/type_input_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_ingredient" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="400dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>